@@ -43,7 +43,9 @@ nginx.servers_pool = http://127.0.0.1
 nginx.userpass = peter:sslers
 nginx.servers_pool_allow_invalid = True
 
-admin_server = http://127.0.0.1:6543
+admin_server = http://127.0.0.1:7201
+# show on instructions
+# api_host = http://127.0.0.1:7202
 
 expiring_days = 80
 
