@@ -45,7 +45,7 @@
             <h3>This form accepts JSON</h3>
 
             <p>
-                <code>curl http://127.0.0.1:6543${admin_prefix}/ca-certificate/upload.json</code>
+                <code>curl ${request.api_host}${admin_prefix}/ca-certificate/upload.json</code>
             </p>
 
             <h3>Do you have a "bundle"?</h3>
