@@ -52,7 +52,7 @@
             <h3>This form accepts JSON</h3>
 
             <p>
-                <code>curl http://127.0.0.1:6543${admin_prefix}/ca-certificate/upload.json</code>
+                <code>curl ${request.admin_url}/ca-certificate/upload.json</code>
             </p>
 
 <p>
@@ -64,7 +64,7 @@
 % for xi in CA_AUTH_X:
     &nbsp;--form 'le_${xi}_auth_file=@letsencryptauthority${xi}.pem'\<br/>
 % endfor
-&nbsp;http://127.0.0.1:6543${admin_prefix}/ca-certificate/upload-bundle.json
+&nbsp;${request.admin_url}/ca-certificate/upload-bundle.json
 </code>
 </p>
 
