@@ -2,7 +2,7 @@ location  /.well-known/admin  {
     proxy_set_header  X-Real-IP  $remote_addr;
     proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header  Host  $host;
-    proxy_pass  http://127.0.0.1:6543;
+    proxy_pass  http://127.0.0.1:7201;
 
     auth_basic  "Administrator Login";
     auth_basic_user_file  /etc/nginx/_htpasswd/peter_sslers;
