@@ -18,7 +18,7 @@ server {
 
     # edit the location of the proxypass for tests
     location / {
-        proxy_pass  http://127.0.0.1:6543;
+        proxy_pass  http://127.0.0.1:7201;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
